async fetching of acls from vault, heavy refactoring. resolves #26, relates to #30